Actualizacion de data y estilos

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dale like ❤</title>
-    <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/normalize.css">
+    <title>PokeApi</title>
+    <link rel="shortcut icon" href="./images/Poké_Ball_icon.svg" type="image/x-icon">
+    <!-- <link rel="stylesheet" href="./css/normalize.css"> -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -22,14 +22,18 @@
             <!-- <img src="./images/bg-pattern-card.svg" alt="imagen header card" class="card-header"> -->
             <div class="card-body">
                 <div class="card-body-header">
-                    <h1 class="card-body-type">Tipo</h1>
+
+                    <h1 class="card-body-nombre">nombre</h1>
+                    <h1 class="card-body-tipo">tipo</h1>
+                    <h1 class="card-body-hp">HP55</h1>
+                    <!-- <h1 class="card-body-type">Tipo</h1> -->
                 </div>
                 <img src="./images/image-victor.jpg" alt="imagen de vitoko" class="card-body-img">
-                <h1 class="card-body-title">
+                <!-- <h1 class="card-body-title">
                     Victor charst
                     <span>26</span>
-                </h1>
-                <p class="card-body-text">London</p>
+                </h1> -->
+                <!-- <p class="card-body-text">London</p> -->
             </div>
             <div class="card-footer">
                 <div class="card-footer-social">
